--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img src="images/Ak circle.PNG" alt="Pic not Found"></td>
+      <td><img src="images/Ak circle.png" alt="Pic not Found"></td>
       <td>
         <h1>Arun Bk</h1>
         <p><em>Co-Founder and Director of GigipO</em></p>
